# dore

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.dev/: DASHBOARD.md  DESIGN.md  DEVELOPMENT.md  PLAN.md  PROMPT.md  REQUIREMENT.md  WORKFLOWS.md
.dev/process/: architect.md
.dev/progress/: committer.md  developer.md  planner.md  reviewer.md  tester.md
apps/daemon/: package.json
apps/desktop/: index.html  package.json  vite.config.ts
configs/: dore.config.example.yaml  m16-broker-input.example.json
docs/designs/: 01_system_architecture.md  02_memory_and_llm_wiki.md  03_provider_and_auth.md  04_telegram_and_session_runtime.md  05_scheduler_and_self_improvement.md  06_quality_and_test_strategy.md  07_goal_management_and_reporting.md  08_multi_agent_and_a2a.md  09_clawhub_skill_integration.md  20260425_223158_existing_design_review_and_roadmap_basis.md  20260425_225514_existing_design_review_and_roadmap_synthesis.md  20260425_231613_design_only_runtime_architecture.md  20260425_235154_agent_workflow_engine_roadmap_design_basis.md  20260426_001233_security_policy_guardrails_sandboxing.md  20260426_004308_ai_agent_technology_classification.md  20260426_011905_tool_skill_clawhub_compatibility.md  20260426_014615_durable_workflow_state_scheduler.md
docs/drafts/: 00_PRODUCT_BRIEF.md  01_AGENT_SPEC.md  02_MEMORY_KNOWLEDGE.md  03_WORKFLOWS.md  04_TOOLS_AND_DATA.md  05_SAFETY_AND_PERMISSIONS.md  06_TECHNICAL_DESIGN.md  README.md  (+24 more)
src/: cli.rs  lib.rs  main.rs
tests/: cli_smoke.rs
(+90 files in other folders)
