[package]
name = "dore"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Dore local-only LLM Wiki scaffold for personal memory."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "dore"
path = "src/main.rs"

[lib]
name = "dore"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
